--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2038,6 +2038,10 @@
   <java-symbol type="array" name="shutdown_reboot_actions" />
   <java-symbol type="drawable" name="ic_lock_screenshot" />
   <java-symbol type="drawable" name="ic_lock_reboot" />
+  <public type="drawable" name="ic_lock_expanded_desktop" />
+  <public type="string" name="global_action_expanded_desktop" />
+  <public type="string" name="global_action_expanded_desktop_off" />
+  <public type="string" name="global_action_expanded_desktop_on" />
 
   <!-- Custom Vibrations -->
   <java-symbol type="string" name="vibration_picker_title"/>
