--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -2039,6 +2039,7 @@
   <java-symbol type="drawable" name="ic_lock_screenshot" />
   <java-symbol type="drawable" name="ic_lock_reboot" />
   <public type="drawable" name="ic_lock_expanded_desktop" />
+  <public type="drawable" name="ic_lock_expanded_desktop_off" />
   <public type="string" name="global_action_expanded_desktop" />
   <public type="string" name="global_action_expanded_desktop_off" />
   <public type="string" name="global_action_expanded_desktop_on" />
