SystemUI: refactor fast charge toggle
Device trees need to set a path to enable the toggle.
It will not show otherwise.

Moved all file operations off the main thread and use a
preference to save the last state so it persists.

	<!-- empty string to disable, or like: /sys/kernel/fast_charge/force_fast_charge
         it is disabled by default so devices need to add an overlay to enable-->
    <string name="config_fastChargePath" translatable="false"></string>

PS8: Lower delay to 250

Change-Id: Ib1465a98893ec8e7854c8b80f8352016ff6248ad
Signed-off-by: Roman Birg <romanbirg@gmail.com>

Conflicts:

	core/res/res/values/config.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettings.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsModel.java

Signed-off-by: iceandfire <arhamjamal@gmail.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1023,4 +1023,8 @@
         <item>250</item>
         <item>250</item>
     </integer-array>
+
+	<!-- empty string to disable, or like: /sys/kernel/fast_charge/force_fast_charge
+         it is disabled by default so devices need to add an overlay to enable-->
+    <string name="config_fastChargePath" translatable="false"></string>
 </resources>
